--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,10 @@
     src: url('poppins.woff2') format('woff2');
   }
 html{
-    background-color:rgb(255, 255, 255)
+    background-color:rgb(30, 30, 30);
+}
+.white-html{
+    background-color:rgb(255, 255, 255) !important;
 }
 body{ 
     margin: 0; 
@@ -236,8 +239,12 @@ table, th, td, tr {
     width: 21em !important 
 }
 .invisible{visibility:hidden}
-.name_big{
+.name-big{
     font-size:8vw;
+    white-space: pre-wrap;
+}
+.name-big-big{
+    font-size:10vw !important;
     white-space: pre-wrap;
 }
 .white{color:rgb(255, 255, 255)}
@@ -265,6 +272,7 @@ table, th, td, tr {
 .team{background: linear-gradient(-10deg,rgb(255, 180, 0), rgb(212, 255, 0));}
 .not{background: linear-gradient(-10deg,rgb(0, 255, 191),rgb(135, 129, 255));}
 .rainbow-gradient-bg{
+    box-shadow: inset 0 0 2em 1em rgba(0, 0, 0, 0.1);
     background: linear-gradient(55deg,rgb(192, 45, 114), rgb(251, 62, 62), rgb(255, 180, 0),rgb(246, 255, 0), rgb(0, 255, 191),rgb(186, 129, 255),rgb(254, 153, 200));
     background-size: 260% 260%;
 }
