--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -37,7 +37,7 @@
                 startButtonEnabled: true,
                 prevPhase: -1,
                 phase: -1,
-                toggleQueue: false,
+                toggleQueue: true,
                 audio1: new Audio(`/static/start/0.mp3`),
                 audio2: new Audio(`/static/start/1.mp3`),
             })
@@ -365,7 +365,7 @@
                     <div class="flex-v">
                         <h1 id="the_name" class={`heading subheading3 pad-10pct-v name-big${state.myTurn?"-big":""}`}>{getTextForTheName()}</h1>
                         {state.myTurn && <button id="done_button" class={`button1 button3 button-green ${state.turnStarted?"":"invisible"} mar-b20`} onClick={done} disabled={!state.doneButtonEnabled}>THEY GOT IT</button>}
-                        <h1  class="heading subheading4">⏱<br/><span id="countdown">{countdown}</span></h1>
+                        <h1  class="heading subheading4">⏱<span id="countdown">{countdown}</span></h1>
                     </div>
                     
                     {state.turnOrder && !state.myTurn && <table>
@@ -376,7 +376,7 @@
                         {state.toggleQueue && state.turnOrder.map((player_id) => {
                             return (
                                 <tr class="white text-centered option small-option slight-v-gradient" id="current_player">
-                                    <p class={`${state.currentPlayerID===player_id?"my":state.teammates.find(x=>x===player_id)?"team":"not"}`}>{player_id===state.userID?<strong>You</strong>:state.players[player_id]}</p>
+                                    <p class={`${state.currentPlayerID===player_id?"my":state.teammates.find(x=>x===player_id)?"team":"not"}`}>{player_id===state.userID?<strong>🫵You</strong>:state.players[player_id]}</p>
                                 </tr>
                             )
                         })}
