--- a/templates/lobby.html
+++ b/templates/lobby.html
@@ -112,7 +112,7 @@
                     alert(`not every player is assigned to a team: ${teammembers.null}`)
                     return
                 }
-                if (!end && confirm("do you want to start")){
+                if (!end){// && confirm("do you want to start")
                     fetch("/advance_game",{
                         method:"POST", 
                         body: JSON.stringify({"game_id":state.gameID,"stage":2}),
