--- a/static/style.css
+++ b/static/style.css
@@ -267,6 +267,23 @@ table, th, td, tr {
 .text-centered{text-align: center;}
 .no-mar-top{margin-top: 0 !important;}
 
+/*button correct animation*/
+.correct{
+    animation: correct 0.4s;
+    animation-iteration-count: 1;
+}
+@keyframes correct {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(0.9);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
 /*background that took me way too long*/
 .my{background: linear-gradient(-10deg,rgb(192, 45, 114), rgb(251, 62, 62));}
 .team{background: linear-gradient(-10deg,rgb(255, 180, 0), rgb(212, 255, 0));}
