--- a/templates/join-game.html
+++ b/templates/join-game.html
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                     <div class="flex-h center">
-                        <button class="button1 button3 mar-1em" onClick={()=>{submit(false)}} disabled={games.length==0}>Join Game</button>
+                        <button class="button1 button3 mar-1em" onClick={()=>{submit(false)}} disabled={games.length==0} id="join_game">Join Game</button>
                         <button class="button1 button3 mar-1em" onClick={()=>{submit(true)}} disabled={games.length==0}>Delete Game</button>
                     </div>
                     <div class="flex-h center">
