--- a/templates/write-names.html
+++ b/templates/write-names.html
@@ -33,9 +33,9 @@
         <h1 id="waiting-on" class="heading subheading4">Waiting on: &nbsp;</h1>
 
         <div class="flex-h mar-1em">
-            <button class="button1 button3" onclick="submit_names()">Submit</button>
+            <button class="button1 button3" onclick="submit_names()" id="submit">Submit</button>
             <!-- TODO: disable start game button until all players have submitted names, and show list of players that haven't submitted names yet -->
-            <button class="button1 button3" onclick="advance_game()">Start Game</button>
+            <button class="button1 button3" onclick="advance_game()"id="start_game">Start Game</button>
         </div>
         <div class="flex-h mar-1em">
             <button class="button2" onclick="location.href='/';">Home</button>
