--- a/templates/create-game.html
+++ b/templates/create-game.html
@@ -18,7 +18,7 @@
             <div class="">
                 <h1 class="heading subheading4" id="subheading_settings">SETTINGS</h1>
                 <br>
-                <label for="game_name" class="label label1 mt-0 required">Game Name:</label>
+                <label for="game_name" class="label label1 mt-0 required">Game Name</label>
                 <input class="input" type="text" id="game_name" name="game_name" placeholder="Insert Name Here" value="" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Insert Name Here'" maxlength="40" autocomplete="off">
                     <label for="number_teams" class="label label1">Number of Teams:</label>
                 <div class="flex-h-left">
