--- a/static/style.css
+++ b/static/style.css
@@ -168,7 +168,7 @@ input[type="range"]{
 }
 .label1{margin-top: 10px;
 margin-bottom: 0 !important;}
-.required:after{
+Label.required:after{
     colour:red !important;
     content:"*";
 }
