--- a/templates/create-game.html
+++ b/templates/create-game.html
@@ -4,8 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
         <title>The Name Game</title>
-        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+        <link rel="stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
+        <link rel="stylesheet" type= "text/css" href="{{ url_for('static',filename='bulma.min.css') }}">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <!-- <script type="text/javascript" src="{{ url_for('static',filename='react.production.min.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static',filename='react-dom.production.min.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static',filename='babel.min.js') }}"></script> -->
