--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,7 +4,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
         <title>The Name Game</title>
-        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
+        <link rel="stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+        <link rel="preload" as="style" type= "text/css" href= "{{ url_for('static',filename='bulma.min.css') }}">
+        <script defer type="text/javascript" src="{{ url_for('static',filename='socket.io.js') }}"></script>
+        <script defer type="text/javascript" src="{{ url_for('static',filename='react.production.min.js') }}"></script>
+        <script defer type="text/javascript" src="{{ url_for('static',filename='react-dom.production.min.js') }}"></script>
+        <script defer type="text/javascript" src="{{ url_for('static',filename='babel.min.js') }}"></script>
+        <script defer type="text/javascript" src="{{ url_for('static',filename='jquery.min.js') }}"></script>
+        <script defer type="text/javascript" src="{{ url_for('static',filename='chart.js') }}"></script>
     </head>
     <body class="lobby2 flex-v rainbow-gradient-bg animate-rainbow">
         <h1 class="heading front-page" id="heading">THE NAME GAME</h1>
