--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-		<title>The Name Game</title>
+        <meta name="mobile-web-app-capable" content="yes">
+        <title>NameGame</title>
 		<link rel="stylesheet" type="text/css" href="/static/style.css">
 		<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 		<script type="text/javascript" src="{{ url_for('static',filename='socket.io.js') }}"></script>
