--- a/templates/readme.html
+++ b/templates/readme.html
@@ -1,4 +1,6 @@
 <head>
+	<meta name="mobile-web-app-capable" content="yes">
+	<title>NameGame</title>
 	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 	<style>
 		body {
