--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -123,6 +123,10 @@
                 }) 
 
                 newSocket.on('emit_next_name',function(name_data) {
+                    //
+                    var date = new Date()
+                    console.log(date.getSeconds()+date.getMilliseconds()*0.001, "emit_next_name")
+                    //
                     if (name_data == "no more names"){
                         concede(true)
                     } else {
@@ -265,7 +269,10 @@
 
             function startAfterAudio(){
                 socket.current.emit("emit_next_name","{{game_id}}",state.userID)
-                console.log("startAfterAudio() emit_next_name")
+                //
+                var date = new Date()
+                console.log("startAfterAudio() emit_next_name",date.getSeconds()+date.getMilliseconds()*0.001)
+                //
                 setState(prevState=>({
                     ...prevState,
                     turnStarted: true,
