--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -263,12 +263,14 @@
                     ...prevState,
                     startButtonEnabled: false,
                 }))
-                audio1.current.addEventListener('ended', startAfterAudio)
+                audio1.current.addEventListener('ended', startAfterAudio, {once : true})
                 audio1.current.play()
             }
 
             function startAfterAudio(){
+                audio1.current.removeEventListener('ended', startAfterAudio)
                 socket.current.emit("emit_next_name","{{game_id}}",state.userID)
+                
                 //
                 var date = new Date()
                 console.log("startAfterAudio() emit_next_name",date.getSeconds()+date.getMilliseconds()*0.001)
@@ -280,7 +282,6 @@
                 }))
                 socket.current.emit("start_timer","{{game_id}}",state.userID)
                 startCountdown()
-                audio1.current.removeEventListener('ended', startAfterAudio)
             }
 
             function done() {
