--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -268,20 +268,24 @@
             }
 
             function startAfterAudio(){
-                audio1.current.removeEventListener('ended', startAfterAudio)
-                socket.current.emit("emit_next_name","{{game_id}}",state.userID)
+                setState(prevState=>(()=>{
+                    if (prevState.turnStarted) { return prevState }
+                    audio1.current.removeEventListener('ended', startAfterAudio)
+                    socket.current.emit("emit_next_name","{{game_id}}",state.userID)
+                    
+                    //
+                    var date = new Date()
+                    console.log("startAfterAudio() emit_next_name",date.getSeconds()+date.getMilliseconds()*0.001, " prevState.turnStarted:",prevState.turnStarted)
+                    //
                 
-                //
-                var date = new Date()
-                console.log("startAfterAudio() emit_next_name",date.getSeconds()+date.getMilliseconds()*0.001)
-                //
-                setState(prevState=>({
-                    ...prevState,
-                    turnStarted: true,
-                    startButtonEnabled: true,
+                    socket.current.emit("start_timer","{{game_id}}",state.userID)
+                    startCountdown()
+                    return {
+                        ...prevState,
+                        turnStarted: true,
+                        startButtonEnabled: true,
+                    }
                 }))
-                socket.current.emit("start_timer","{{game_id}}",state.userID)
-                startCountdown()
             }
 
             function done() {
