--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -263,12 +263,12 @@
                     ...prevState,
                     startButtonEnabled: false,
                 }))
-                audio1.current.addEventListener('ended', startAfterAudio, {once : true})
+                audio1.current.addEventListener('ended', startAfterAudio)
                 audio1.current.play()
             }
 
             function startAfterAudio(){
-                setState(prevState=>(()=>{
+                setState(prevState=>{
                     if (prevState.turnStarted) { return prevState }
                     audio1.current.removeEventListener('ended', startAfterAudio)
                     socket.current.emit("emit_next_name","{{game_id}}",state.userID)
@@ -285,7 +285,7 @@
                         turnStarted: true,
                         startButtonEnabled: true,
                     }
-                }))
+                })
             }
 
             function done() {
