--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -270,7 +270,10 @@
             function startAfterAudio(){
                 audio1.current.removeEventListener('ended', startAfterAudio)
                 setState(prevState=>{
-                    if (!prevState.myTurn) { return prevState }
+                    if (!prevState.myTurn) { 
+                        console.error("bad bad bad",)
+                        console.log("caller to string",arguments.callee.caller.toString())
+                        console.log("last 3 stack trace",arguments.callee.caller,arguments.callee.caller.caller,arguments.callee.caller.caller.caller)
                     socket.current.emit("emit_next_name","{{game_id}}",state.userID)
                     
                     //
